# mdldec

./: CMakeLists.txt  readme.txt
class/: mdldec.cpp  mdldec.h
exe/: main.cpp
vc6/: mdldec.dsp  mdldec.dsw
